[package]
name = "stavka"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio = { version = "0.2.4", features = ["default", "mkdirat"] }
monoio-http = { version = "0.3.12", features = ["default"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
bytes = "1.10.1"
http = "1.3.1"
libc = "0.2.171"
